# quickjs

./: .gitignore  CMakeLists.txt
src/: qjs.c  quickjs-libc.c  quickjs.c
